Closed Bug 109122 Opened 24 years ago Closed 24 years ago

Checkbox is broken. [form sub]

Categories

(Core :: DOM: Core & HTML, defect)

x86
All
defect
Not set
critical

Tracking

()

VERIFIED FIXED

People

(Reporter: coen, Assigned: alexsavulov)

References

()

Details

(Keywords: dataloss, testcase)

Attachments

(1 file)

Build: 2001110603 Steps to reproduce: 1: Go to url 2: check checkbox 3: press submit Actual results: "checkbox:" Expected results: "checkbox: on" See "http://rosdorff.dyndns.org/download/testcase.phps" for source (This used to work in build 20011029) Some websites are totally unusable. (Like mynedstat)
Mozilla/5.0 (Windows; U; Win98; en-US; rv:0.9.5+) Gecko/20011108 jst: could this be related to the other forms bustages we've had lately?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: testcase
Hmm, this caused some serious dataloss in my CMS :( Dataloss keyword ?
Give the checkbox a value and it works. I believe it's supposed to say, "true" if there's no value attribute. Seen on linux, OS->All.
Keywords: dataloss
OS: Windows 98 → All
Summary: Checkbox is broken. → Checkbox is broken.[from sub]
typo
Summary: Checkbox is broken.[from sub] → Checkbox is broken.[form sub]
OS: All → Windows 98
Summary: Checkbox is broken.[form sub] → Checkbox is broken.
what the f... is going on. Re-changing sumary en os.
OS: Windows 98 → All
Summary: Checkbox is broken. → Checkbox is broken. [form sub]
please get a newer build to test this. that particular build (2001110603) had a problem with a check-in that was backed-up.
My current build is 2001110803. (See also comment #1 from Alex Vincent)
John, this looks pretty serious, could you have a look?
confirming (couldn't get a build on my machine until few minutes ago) this is pretty serious
Blocks: 104864
a=asa (on behalf of drivers) for checkin to 0.9.6
Keywords: mozilla0.9.6+
checked in. The first part of the above patch was wrong so that was not commited
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Verifying on windows 98 build 2002-01-07-03-trunk and on linux RedHat 6.2 2002-01-04-08-trunk
Status: RESOLVED → VERIFIED
Component: HTML: Form Submission → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: