Make checkboxes without value attribute work.

b=109122 r=bz sr=jst a=asa (for drivers)